Finally sorted writing the new website page in a more correct format, and got $ concat working. who knew ` and ' look so similar in chrome. Thought I'd tried it but I guess I didnt. Will be much easier to modify and add to the filled char sheet. Plan to shift to camelCase and tighten up code. Started class attribute assigner as an object. Neat to add equipment and proficiencies, and maybe rebuild race to an object function. this thing seems endless, but it's getting closer and closer good enough.

--- a/charactersheetstyle.css
+++ b/charactersheetstyle.css
@@ -597,7 +597,7 @@ form.charsheet {
                                 height: 10px;
                                 border: 1px solid black;
                                 border-radius: 10px;
-                                margin: -1px;
+                                margin: 1px;
                             }
 
                                 form.charsheet main section.combat > div.deathsaves > div div.bubbles input[type=checkbox]:checked {
